--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "test:watch": "npm run test -- --watch",
     "start": "babel-node index.js",
-    "build": "babel src --presets babel-preset-es2015 --out-dir dist"
+    "build": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "build:watch": "nodemon --ignore dist --exec npm run build"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
     "sinon": "^1.17.6",
     "sinon-as-promised": "^4.0.2"
   },
