--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "mongo-milestone",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "test:watch": "npm run test -- --watch",
     "start": "babel-node index.js",
-    "build": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "setup": "npm install && npm run build",
+    "build": "babel src --plugins babel-plugin-transform-es2015-modules-commonjs --out-dir dist",
     "build:watch": "nodemon --ignore dist --exec npm run build"
   },
   "repository": {
@@ -21,7 +22,7 @@
   },
   "homepage": "https://github.com/altenorjr/mongo-milestone#readme",
   "dependencies": {
-    "babel-polyfill": "^6.13.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
     "moment": "^2.15.1",
     "mongodb": "^2.2.10",
     "q": "^1.4.1",
@@ -30,7 +31,6 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "mocha": "^3.0.2",
@@ -39,8 +39,8 @@
     "sinon-as-promised": "^4.0.2"
   },
   "babel": {
-    "presets": [
-      "es2015"
+    "plugins": [
+      "babel-plugin-transform-es2015-modules-commonjs"
     ]
   }
 }
